4.1.0 (2016-07-15)
------------------

- Try opening read only transactions in SQLite read only mode for better
  concurrency/locking behaviour. This is officially supported with Python 3.4,
  but many systems allow it implicitly in older Python versions.

- fix issue353: If an index inherits from a mirror with an empty cache and the
  mirror is returning errors, there would be an error returned by devpi. Now
  this situation is treated like the mirror has no releases and just the
  releases from the index are returned.

- fix issue352: When there was an issue during commit or rollback, the thread
  local info got into an inconsistent state. This caused an AttributeError
  whenever that thread was used. Eventually this could exhaust all worker
  threads and make devpi unresponsive.

- fix issue354: allow more general agent versions, such as 'Python-urllib/3.5'
  to appear before the installer user agent string so redirects for setuptools
  versions which had that work.

- fix issue214: change the order in which indices are searched to fix the
  mirror whitelisting and also make sure that packages, if available,
  are always installed from internal indices instead of root/pypi.


4.0.0 (2016-05-12)
------------------

.. note::

  Please note that devpi-server 4.0.0 is a bug fix/compatibility release as it
  only changes project name normalization compared to 3.1.x. The internal use
  of the normalization requires an export/import cycle, which is the reason for
  the major version increase. There are no other big changes and so everyone
  who used devpi-server 3.x.y should be fine just using 4.0.0. It's also fine
  to export from 2.6.x and import with 4.0.0.

- require devpi-common 3.0.0 which changes the normalization of project names.

- allow import of exported data from devpi-server 3.1.2 with inconsistently
  normalized project names.


3.1.2 (2016-05-12)
------------------

- fix issue336: the mirror_whitelist setting got lost on import.
